finally got the stack order and z-index correct for dashboard

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,17 +2,32 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-$background-blue: #73b9e6;
+@import 'global';
+li {list-style: none;}
 
 .inline {display: inline;}
+
 .extended-banner {height: 100%;
                   background-color: $background-blue;
+
+}
+
+#nav {position: relative;
+      z-index: 2;
+      width: 100%;
+      top: 0;
 
 }
 
 .lobster {font-family: "Lobster"}
 
 .border-bottom {border-bottom: solid 1px #efefef;}
+
+.center-text {text-align: center;}
+
+.on-top { position: relative;
+          z-index: 200;
+}
 
 #modal-back {height: 100%;
              width: 100%;
@@ -57,10 +72,18 @@ $background-blue: #73b9e6;
 
 //map
 
-#map-wrapper {width: 100%;}
+#map-wrapper {width: 100%;
+              height: 100%;
+              position: absolute;
+              z-index: 1;
+              top: 0;
+              left: 0;
+}
 
 #map {width: 100%;
-      height: 400px;
+      height: 100%;
+      position: relative;
+      z-index: 1;
 }
 
 #map img { 
@@ -69,3 +92,13 @@ $background-blue: #73b9e6;
 #map label { 
   width: auto; display:inline; 
 } 
+
+#side-bar {height: 100%;
+           width: 300px;
+           position: relative;
+           float: right;
+           z-index: 3;
+           background-color: $background-blue;
+           padding: 10px;
+           top: 0;
+}
